k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: users
  labels:
    app: users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          # Substitua pela sua imagem ECR / registry
          image: 123456789012.dkr.ecr.us-east-1.amazonaws.com/tech-challenge-users:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /users/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /users/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
