k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-ingress
  namespace: users
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
spec:
  rules:
    - host: your.domain.example
      http:
        paths:
          - path: /users/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-svc
                port:
                  number: 80
  tls:
    - hosts:
        - your.domain.example
      secretName: tls-secret
